<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connect.joingroup.JoinGroupFragment"

    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="124dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/join_group_search_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/find_other_members_view_public_gift_preferences_and_wish_lists"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputGroupName"
        android:layout_width="352dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/e_g_henderson_fam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/findGroup"
        android:layout_width="205dp"
        android:layout_height="54dp"
        android:text="@string/find_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGroupName"
        app:layout_constraintVertical_bias="0.177" />

</androidx.constraintlayout.widget.ConstraintLayout>